# DC3-Suffix-Array

./: .gitignore  Main.hs  README.md  TestRMQ.hs  suffixarray.cabal
slideshow/: CS240HFinalProjectSlides.html  CS240HFinalProjectSlides.txt
src/: FischerHeun.hs  NaiveAlgorithms.hs  SparseTable.hs  SuffixArray.hs  TestRMQ.hs  Utility.hs
test/: Test.hs
