name:           suffixarray
version:        1.0.0
synopsis:       Stanford CS240h Final Project - O(n) Suffix Array
build-type:     Simple
cabal-version:  >= 1.8
category:       System

-- STUDENTS: Make sure you add any no haskell source files you want included in
-- your submission here!
extra-source-files:
  README.md

library
  hs-source-dirs: src
  exposed-modules:
    SuffixArray
  build-depends:
    base < 5
   ,bytestring
   ,containers
   ,directory
   ,filepath
   ,process
   ,random
   ,SHA2
   ,unix-compat
  
  default-language: Haskell2010
  ghc-options: -Wall

executable suffixarray
  main-is: Main.hs
  build-depends:
    base < 5
   ,suffixarray
  
test-suite test-suffixarray
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Test.hs
  build-depends:
    base < 5
   ,QuickCheck > 2.5
   ,hspec
   ,suffixarray
  ghc-options: -Wall

