name:           suffixarray
version:        1.0.0
synopsis:       Stanford CS240h Final Project - O(n) Suffix Array
build-type:     Simple
cabal-version:  >= 1.8
category:       System

-- STUDENTS: Make sure you add any no haskell source files you want included in
-- your submission here!
extra-source-files:
  README.md

library
  hs-source-dirs: src
  exposed-modules:
    SuffixArray
  build-depends:
    base < 5
   ,bytestring
   ,containers
   ,directory
   ,filepath
   ,process
   ,random
   ,SHA2
   ,unix-compat
   ,array
  
  default-language: Haskell2010
  ghc-options: -Wall

